SONAR-10708 fix activity graph tooltip text overflow

--- a/server/sonar-web/src/main/js/apps/overview/styles.css
+++ b/server/sonar-web/src/main/js/apps/overview/styles.css
@@ -416,7 +416,7 @@
 }
 
 .overview-analysis-graph-tooltip-description {
-  max-width: 120px;
+  max-width: 80px;
 }
 
 .overview-activity-events {
